--- a/personal_portfolio/index.html
+++ b/personal_portfolio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='styles.css'>
     <title>personal portfolio</title>
+    <script src="https://kit.fontawesome.com/5d0668dc7e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,82 +18,100 @@
         </nav>
     </header>
     <main>
-        <section id='About'>
-            <h2 id="welcome-section">Hey I am Mimic</h2>
-            <p id='about-text'><i>a web developer</i></p>
-        </section>
-       
-        <section id='Work'>
-            <p id='work-title'>These are some of my projects</p>
-            <div id='projects'>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image
-                            src='https://github.com/zwethu/Free_code_camp_responsive_web_design_course-s-projects/blob/main/images/tribute.jpg'>
-                    </a>
-                    <p class='project-text'>Tribute Page</p>
-                </div>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image src=''>
-                    </a>
-                    <p class='project-text'></p>
-                </div>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image src=''>
-                    </a>
-                    <p class='project-text'></p>
-                </div>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image src=''>
-                    </a>
-                    <p class='project-text'></p>
-                </div>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image src=''>
-                    </a>
-                    <p class='project-text'></p>
-                </div>
-                <div class='project-tile'>
-                    <a href=''>
-                        <image src=''>
-                    </a>
-                    <p class='project-text'></p>
-                </div>
+        <section id="About">
+            <div id="Welcome-section">
+                <h1 id="welcome">Hey I am Mimic</h1>
+                <p id='about-text'><i>a web developer</i></p>
             </div>
-            <button>Show all > </button>
+        </section>
+
+        <section>
+            <div id='Work'>
+                <p id='work-title'>These are some of my projects</p>
+                <div class="work-box">
+                    <div id='projects'>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/tribute.jpg'>
+                                    <p class='project-text'>Tribute Page</p>
+                            </a>
+
+                        </div>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/random-quote-machine.png'>
+                                    <p class='project-text'>Random Quote Machine</p>
+                            </a>
+
+                        </div>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/calc.png'>
+                                    <p class='project-text'>JavaScript Calculator</p>
+                            </a>
+
+                        </div>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/map.jpg'>
+                                    <p class='project-text'>Map Data Across the Globe</p>
+                            </a>
+
+                        </div>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/wiki.png'>
+                                    <p class='project-text'>Wikipedia Viewer</p>
+                            </a>
+
+                        </div>
+                        <div class='project-tile'>
+                            <a href=''>
+                                <image src='/images/tic-tac-toe.png'>
+                                    <p class='project-text'>Tic Tac Toe Game</p>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+                <button>Show all > </button>
+            </div>
+
         </section>
         <section id='Contact'>
-            <p id='contact-title'></p>
-            <p id='contact-text'></p>
-            <div id='social-medias'>
-                <div class='social-media'>
-                    <i class="fa-brands fa-facebook"></i>
-                    <p class='media'></p>
-                </div>
-                <div class='social-media'>
-                    <p class='media'></p>
-                </div>
-                <div class='social-media'>
-                    <p class='media'></p>
-                </div>
-                <div class='social-media'>
-                    <p class='media'></p>
-                </div>
-                <div class='social-media'>
-                    <p class='media'></p>
+            <div id="contact-div">
+                <p id='contact-title'>Let's work together...</p>
+                <p id='contact-text'>How do you take your coffee?</p>
+                <div id='social-medias'>
+                    <div class='social-media'>
+                        <i class="fa-brands fa-facebook"></i>
+                        Facebook
+                    </div>
+                    <div class='social-media'>
+                        <i class="fa-brands fa-github"></i>
+                        GitHub
+                    </div>
+                    <div class='social-media'>
+                        <i class="fa-brands fa-twitter"></i>
+                        Twitter
+                    </div>
+                    <div class='social-media'>
+                        <i class="fa-solid fa-at"></i>Send a mail
+                    </div>
+                    <div class='social-media'>
+                        <i class="fa-regular fa-phone"></i>Call me
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <hr>
     <footer>
-        <p id='disclaimer'>**This is just a fake portfolio. All the projects and contact details given are not real.
-        </p>
-        <p>© Created for <a href='' id='profile-link' target='_blank'>freeCodeCamp</a> </p>
+        <div id="footer-div">
+            <p id='disclaimer'>**This is just a fake portfolio. All the projects and contact details given are not real.
+            </p>
+            <p>© Created for <a href='' id='profile-link' target='_blank'>freeCodeCamp</a> </p>
+        </div>
     </footer>
 
 </body>
